--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "bootstrap": "^3.3.6",
-    "leaflet": "~0.7.7"
+    "leaflet": "~0.7.7",
+    "firebase": "^2.1.0"
   }
 }
