--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-leaflet": "2.2.3",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "emberfire": "1.6.6",
     "loader.js": "^4.0.1"
   }
 }
